--- a/Simulacion/De-Una-Pets/src/app/pages/home-page2/home-page2.component.html
+++ b/Simulacion/De-Una-Pets/src/app/pages/home-page2/home-page2.component.html
@@ -28,7 +28,7 @@
     <div class="balance-card">
       <div class="balance-title">Saldo disponible</div>
       <div class="balance-amount">
-        <span class="amount">$ 20,00</span>
+        <span class="amount">$ 15,93</span>
         <button nz-button nzShape="circle" nzType="default" class="btn-icon eye-btn">
           <i nz-icon nzType="eye" nzTheme="outline"></i>
         </button>
@@ -89,22 +89,16 @@
       </div>
     </div>
   
+    <!-- CONTENEDOR BOTONES PRINCIPALES -->
     <div class="main-buttons" style="background-color: white; border-radius: 15%;">
-        <button nz-button nzType="default" class="transfer-btn">Transferir</button>
-        <button nz-button nzType="primary" class="qr-btn" (click)="pagarQR()">Pagar a QR</button>
-        
-        <!-- GIF FLOTANTE -->
-        <div class="floating-gif">
-          <img src="https://i.ibb.co/7xk7krkx/saludo3.gif" alt="Saludo" />
-          
-          <!-- Burbuja de diálogo -->
-          <div class="speech-bubble">
-            Tip: Recuerda destinar un presupuesto semanal<br>
-            y lleva un registro de tus compras 💡🌟
-          </div>
-        </div>
-      </div>
+      <button nz-button nzType="default" class="transfer-btn">Transferir</button>
+      <button nz-button nzType="primary" class="qr-btn" >Pagar a QR</button>
       
+      <!-- GIF FLOTANTE -->
+      <div class="floating-gif">
+        <img src="https://i.ibb.co/6JTH7hxk/triste-1.gif" alt="Saludo" />
+      </div>
+    </div>
   
     <!-- NAVEGACIÓN INFERIOR -->
     <div class="bottom-nav">
